--- a/.github/workflows/trello-integration.yml
+++ b/.github/workflows/trello-integration.yml
@@ -1,4 +1,3 @@
-# .github/workflows/trello-integration.yml
 name: Trello Integration
 
 on:
@@ -24,11 +23,11 @@ jobs:
         TRELLO_TOKEN: ${{ secrets.TRELLO_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        # 커밋 메시지에서 #이슈번호 추출
-        COMMIT_MSG=$(git log -1 --pretty=format:"%s")
-        echo "Commit message: $COMMIT_MSG"
+        # 커밋 메시지에서 #이슈번호 추출 (전체 커밋 메시지, 여러 줄 지원)
+        COMMIT_MSG=$(git log -1 --pretty=format:"%B")
+        echo "Full commit message: $COMMIT_MSG"
         
-        # #숫자 패턴 찾기
+        # #숫자 패턴 찾기 (여러 줄에서)
         ISSUE_NUMBERS=$(echo "$COMMIT_MSG" | grep -oE '#[0-9]+' | sed 's/#//')
         
         for ISSUE_NUM in $ISSUE_NUMBERS; do
