chore: 커밋 댓글 형식 수정
#2

--- a/.github/workflows/trello-integration.yml
+++ b/.github/workflows/trello-integration.yml
@@ -1,4 +1,3 @@
-# .github/workflows/trello-integration.yml
 name: Trello Integration
 
 on:
@@ -73,38 +72,34 @@ jobs:
             COMMIT_SHORT_SHA="${{ github.sha }}"
             COMMIT_SHORT_SHA="${COMMIT_SHORT_SHA:0:7}"
             
-            # 커밋 메시지를 한 줄로 변환 (줄바꿈 제거)
-            COMMIT_MSG_ONELINE=$(echo "$COMMIT_MSG" | tr '\n' ' ' | sed 's/  */ /g' | sed 's/^ *//;s/ *$//')
+            # 커밋 메시지를 한 줄로 변환
+            COMMIT_MSG_CLEAN=$(echo "$COMMIT_MSG" | tr '\n' ' ' | tr -d '"' | sed 's/  */ /g' | sed 's/^ *//;s/ *$//')
             
-            COMMENT_TEXT="🔧 **커밋 연결됨**
-
-**커밋**: [\`$COMMIT_SHORT_SHA\`]($COMMIT_URL)
-**메시지**: $COMMIT_MSG_ONELINE
-**브랜치**: ${{ github.ref_name }}
-**작성자**: ${{ github.actor }}"
+            # 댓글 텍스트를 변수로 구성
+            COMMENT_LINE1="커밋 연결됨: [\`$COMMIT_SHORT_SHA\`]($COMMIT_URL)"
+            COMMENT_LINE2="메시지: $COMMIT_MSG_CLEAN"
+            COMMENT_LINE3="브랜치: ${{ github.ref_name }}"
+            COMMENT_LINE4="작성자: ${{ github.actor }}"
+            COMMENT_TEXT="$COMMENT_LINE1\n\n$COMMENT_LINE2\n$COMMENT_LINE3\n$COMMENT_LINE4"
             
             echo "Calling Trello API with card ID: $TRELLO_CARD_ID"
-            echo "API URL: https://api.trello.com/1/cards/$TRELLO_CARD_ID/actions/comments?key=***&token=***"
             
-            # JSON 이스케이프 처리
-            ESCAPED_COMMENT=$(echo "$COMMENT_TEXT" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+            # jq를 사용해서 안전하게 JSON 생성
+            JSON_PAYLOAD=$(jq -n --arg text "$COMMENT_TEXT" '{text: $text}')
             
             RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
               -H "Content-Type: application/json" \
               "https://api.trello.com/1/cards/$TRELLO_CARD_ID/actions/comments?key=$TRELLO_API_KEY&token=$TRELLO_TOKEN" \
-              -d "{\"text\":\"$ESCAPED_COMMENT\"}")
+              -d "$JSON_PAYLOAD")
             
             HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
             RESPONSE_BODY=$(echo "$RESPONSE" | head -n -1)
             
             echo "HTTP Response Code: $HTTP_CODE"
-            echo "Response Body: $RESPONSE_BODY"
-            
             if [ "$HTTP_CODE" = "200" ]; then
-              echo "✅ Successfully added commit info to Trello card $TRELLO_CARD_ID"
+              echo "Successfully added commit info to Trello card"
             else
-              echo "❌ Failed to add comment to Trello card"
-              echo "Error details: $RESPONSE_BODY"
+              echo "Failed to add comment. Response: $RESPONSE_BODY"
             fi
           else
             echo "No Trello Card ID found in issue #$ISSUE_NUM"
